Remove javac plugin that allowed using `--release` and `--add-exports` together